# OpenCV_Project

./: README.md
Contents/: imgfilter.cpp
Contents/CameraCaptureCanny/: CMakeLists.txt  cameracapturecanny.cpp
Contents/Canny_edge_camera/: CMakeLists.txt  CannyCamera.cpp
Contents/Contrast_Brightness/: CMakeLists.txt  ContrastBrightness.cpp
Contents/test_lenna/: CMakeLists.txt  DisplayImage.cpp  myNotes.txt
